# FileConverter

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/converters/: archive_converter.rs  data_converter.rs  document_converter.rs  image_converter.rs  markup_converter.rs  media_converter.rs  mod.rs  pdf_converter.rs  spreadsheet_converter.rs  svg_converter.rs  text_converter.rs
src/components/: ConversionPanel.svelte  FileCard.svelte  FileDropzone.svelte  Header.svelte  Toast.svelte
