[package]
name = "file-converter"
version = "1.0.0"
description = "A powerful local file converter"
authors = ["you"]
edition = "2021"

[lib]
name = "file_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
lopdf = "0.34"
printpdf = "0.7"
base64 = "0.22"
pdf-extract = "0.7"
mime_guess = "2"
encoding_rs = "0.8"
csv = "1.3"
